--- a/display/Makefile
+++ b/display/Makefile
@@ -5,10 +5,15 @@ KBASE_PATH_RELATIVE = $(M)
 KBUILD_OPTIONS += CONFIG_DRM_PANEL_SAMSUNG_S6E3FC3_6A=m
 
 EXTRA_CFLAGS += -DDYNAMIC_DEBUG_MODULE=1
-EXTRA_CFLAGS += -I$(KERNEL_SRC)/../google-modules/display
+EXTRA_CFLAGS += -I$(KERNEL_SRC)/../private/google-modules/display/common/include
+EXTRA_CFLAGS += -I$(KERNEL_SRC)/../private/google-modules/display/samsung
+EXTRA_CFLAGS += -I$(KERNEL_SRC)/../private/google-modules/display/samsung/include/uapi
 EXTRA_CFLAGS += -Werror
 
-EXTRA_SYMBOLS += $(OUT_DIR)/../google-modules/display/samsung/Module.symvers
+EXTRA_SYMBOLS += $(OUT_DIR)/../private/google-modules/display/common/gs_panel/Module.symvers
+EXTRA_SYMBOLS += $(OUT_DIR)/../private/google-modules/display/samsung/Module.symvers
+
+include $(KERNEL_SRC)/../private/google-modules/soc/gs/Makefile.include
 
 modules modules_install clean:
 	$(MAKE) -C $(KERNEL_SRC) M=$(M) W=1 \
