arm64/dts: bluejay: Update bluejay dts files
Sync with private/devices/google/raviole (a9ff6e5b57dc)

Bug: 358264236
Change-Id: Iac46b6b6e4ccb2c8e098ef66cd5565495820554c
Signed-off-by: Jacky Liu <qsliu@google.com>

--- a/dts/gs101-bluejay-touch-dev.dtsi
+++ b/dts/gs101-bluejay-touch-dev.dtsi
@@ -3,7 +3,7 @@
  * Copyright 2021 Google, LLC.
  */
 
-#include "google-base/gs101-fts-touch.dtsi"
+#include "gs101/gs101-fts-touch.dtsi"
 
 &spitouch {
 	spi-max-frequency = <10000000>;
