--- a/dts/Makefile
+++ b/dts/Makefile
@@ -1,15 +1,6 @@
-dtb-$(CONFIG_SOC_GS101) += \
-	gs101-a0.dtb \
-	gs101-b0.dtb
+# SPDX-License-Identifier: GPL-2.0
 
-soc-dtbo-$(CONFIG_SOC_GS101) += \
-	gs101-dpm-eng.dtbo \
-	gs101-dpm-user.dtbo \
-
-DTC_FLAGS_gs101-dpm-eng += -a 4096
-DTC_FLAGS_gs101-dpm-user += -a 4096
-
-dtbo-y += \
+gs101_overlays := \
 	gs101-bluejay-dev.dtbo \
 	gs101-bluejay-proto1_0.dtbo \
 	gs101-bluejay-proto1_1.dtbo \
@@ -21,18 +12,45 @@ dtbo-y += \
 	gs101-bluejay-pvt1_0.dtbo \
 	gs101-bluejay-mp1_0.dtbo
 
-gs101-bluejay-dev.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-proto1_0.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-proto1_1.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-evt1_0.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-evt1_1.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-evt1_2.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-dvt1_0.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-dvt1_1.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-pvt1_0.dtbo-base := google-base/gs101-b0.dtb
-gs101-bluejay-mp1_0.dtbo-base := google-base/gs101-b0.dtb
+gs101_dtbs := \
+	gs101/gs101-a0.dtb \
+	gs101/gs101-b0.dtb
 
-gs101-dpm-eng.dtbo-base := google-base/gs101-b0.dtb
-gs101-dpm-user.dtbo-base := google-base/gs101-b0.dtb
+# Usage:
+#   $(call DTBS_overlay_template, overlay, base_dtb, suffix)
+#
+# This is a generic template to create the following construct:
+#   <overlay>-<suffix>-dtbs := <base_dtb>.dtb <overlay>.dtbo
+define DTBS_overlay_template
+	$(1:%.dtbo=%-$(strip $3)-dtbs) := $2 $1
+endef
 
-MKDTIMG_FLAGS += --page_size=4096  --id=/:board_id --rev=/:board_rev
+# Usage:
+#   $(call DTB_object_template, CONFIG_, overlay, suffix)
+#
+# This is a generic template to create the following construct:
+#   dtb-$(CONFIG_) += <overlay>-<suffix>.dtb
+define DTB_object_template
+	dtb-$(strip $1) += $(2:%.dtbo=%-$(strip $3).dtb)
+endef
+
+# Usage:
+#   $(call multi_dtbs_overlay, list_of_base_dtbs, list_of_overlays, CONFIG_)
+#
+# For each (base_dtb,overlay) pair, this will create the following constructs:
+#   <overlay>-<base_dtb>-dtbs := <base_dtb>.dtb <overlay>.dtbo
+#   dtb-$(CONFIG_) += <overlay>-<base_dtb>.dtb
+define multi_dtbs_overlay
+	$(foreach base, $1, \
+		$(foreach overlay, $2, \
+			$(eval $(call DTBS_overlay_template, $(overlay), $(base), $(base:%.dtb=%))) \
+			$(eval $(call DTB_object_template, $3, $(overlay), $(base:%.dtb=%)))))
+endef
+
+# Create the -dtbs and dtb-y constructs. We can do this by looping through the
+# base dtbs and apply each overlay to it. Kbuild will use these -dtbs
+# constructs to determine which dtbs are the base dtbs and which are the
+# overlays. For the base dtbs, kbuild will expose the symbols as needed for the
+# overlays. Additionally, kbuild will statically apply the overlay to the base
+# dtb which could be used to verify the overlay applies cleanly.
+$(call multi_dtbs_overlay, $(gs101_dtbs), $(gs101_overlays), y)
