--- a/dts/gs101-bluejay-audio.dtsi
+++ b/dts/gs101-bluejay-audio.dtsi
@@ -7,7 +7,7 @@
  *
 */
 
-#include "google-base/gs101-raviole-audio.dtsi"
+#include "gs101/gs101-raviole-audio.dtsi"
 
 &aoc {
 	aoc-board-cfg = "b3";
@@ -57,7 +57,6 @@
 		compatible = "cirrus,cs40l26a";
 		reg = <0x43>;
 
-		dev-name = "cs40l26a";	/* sysfs folder name */
 		input-device-name = "cs40l26_input";	/* input device name */
 		pinctrl-names = "default";
 		pinctrl-0 = <&hapt_amp_irq &hapt_amp_rst &hapt_amp_trig>;
@@ -65,17 +64,18 @@
 		interrupt-parent = <&gpa6>;
 		interrupts = <5 0 0>;
 
-		reset-gpios = <&gpp24 0 0>;
+		reset-gpios = <&gpp24 0 GPIO_ACTIVE_LOW>;
 
 		cirrus,bst-dcm-en = <0>;
 		cirrus,pwle-zero-cross-en;
 		cirrus,bst-expl-mode-disable;
 		cirrus,vpbr-enable;
-		cirrus,vpbr-thld-mv = <2800>;		/* 2.8V */
+		cirrus,vpbr-thld-uv = <2800000>;	/* 2.8V */
 		cirrus,bst-ipk-microamp = <4000000>;	/* 4A */
-		cirrus,boost-ctl-microvolt = <10000000>;/* 10V */
+		cirrus,bst-ctl-microvolt = <10000000>;	/* 10V */
 		cirrus,f0-default = <0x2A8000>;		/* 170 Hz */
 		cirrus,redc-default = <0x68000>;	/* 13 Ohm */
+		cirrus,pm-active-timeout-ms = <5>;
 
 		status = "okay";
 		cs40l26_codec: cs40l26_codec@snd {
