--- a/dts/gs101-bluejay-camera.dtsi
+++ b/dts/gs101-bluejay-camera.dtsi
@@ -8,7 +8,8 @@
 
 #include <dt-bindings/clock/gs101.h>
 #include <dt-bindings/gpio/gpio.h>
-#include <dt-bindings/pinctrl/samsung.h>
+#include <arm64/exynos/exynos-pinctrl.h>
+#include "gs101/gs101-pinctrl.h"
 
 &pinctrl_4 {
 	hsi2c1_bus: hsi2c1-bus {
