kleaf: Use //private/devices/google/common:kernel
Replace //private/google-modules/soc/gs:gs_kernel_build with
//private/devices/google/common:kernel to remove the unnecessary
dependency on private/google-modules/soc/gs.

Bug: 319536450
Change-Id: I64f179be0b80cbdc3626cbbcba77908c21a4a29c
Signed-off-by: Jacky Liu <qsliu@google.com>

--- a/display/BUILD.bazel
+++ b/display/BUILD.bazel
@@ -18,7 +18,7 @@ kernel_module(
         # keep sorted
         "panel-samsung-s6e3fc3_6a.ko",
     ],
-    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
+    kernel_build = "//private/devices/google/common:kernel",
     visibility = [
         "//private/devices/google:__subpackages__",
         "//private/google-modules/soc/gs:__pkg__",
